// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`print with multiple imports 1`] = `
"// @ts-nocheck
/* sagaroute-inject:imports */
/* injected by sagaroute: start */
import {action1,action2,default as defaultAction} from "@/utils/action.ts";
import * as loader from "@/utils/loader.ts";
import {loader3} from "@/utils/loader.ts";
import PagesUsers from "@/pages/users.tsx";
import PagesDashboard from "@/pages/dashboard.tsx";
import PagesChart,{Error as PagesChartError} from "@/pages/chart.tsx";
/* injected by sagaroute: end */

import React from "react";

// sagaroute-inject: routes
export default [
  {
    "path": "users",
    "element": <PagesUsers/>,
    "action": action1,
    "loader1": loader.loader1
  },
  {
    "path": "dashboard",
    "Component": <PagesDashboard/>,
    "action": action2,
    "loader1": loader.loader2
  },
  {
    "path": "chart",
    "Component": <PagesChart/>,
    "action": defaultAction,
    "loader1": loader3,
    "errorElement": <PagesChartError/>
  }
];"
`;

exports[`test print with normal routes by comment: /**/ 1`] = `
"// @ts-nocheck
import React from "react";
/* sagaroute-inject:imports */
/* injected by sagaroute: start */
import SrcPagesUsers_Id_ from "./src/pages/users/[id].tsx";
import SrcPagesIndex from "./src/pages/index.tsx";
import SrcPages404 from "./src/pages/404.tsx";
/* injected by sagaroute: end */

function getRoutes() {
  /* sagaroute-inject:routes */
  return [
  {
    "path": "users",
    "children": [
      {
        "path": ":id",
        "element": <SrcPagesUsers_Id_/>
      }
    ]
  },
  {
    "path": "/",
    "element": <SrcPagesIndex/>
  },
  {
    "path": "*",
    "element": <SrcPages404/>
  }
];
}
export default getRoutes;"
`;

exports[`test print with normal routes by comment: // 1`] = `
"// @ts-nocheck
import React from "react";
// @ts-ignore
/* sagaroute-inject:imports */
/* injected by sagaroute: start */
import SrcPagesUsers_Id_ from "./src/pages/users/[id].tsx";
import SrcPagesIndex from "./src/pages/index.tsx";
import SrcPages404 from "./src/pages/404.tsx";
/* injected by sagaroute: end */

// sagaroute-inject: routes
const routes = [
  {
    "path": "users",
    "children": [
      {
        "path": ":id",
        "element": <SrcPagesUsers_Id_/>
      }
    ]
  },
  {
    "path": "/",
    "element": <SrcPagesIndex/>
  },
  {
    "path": "*",
    "element": <SrcPages404/>
  }
];
export default routes;"
`;
